--- a/ui/wizard/ui_profile.ui
+++ b/ui/wizard/ui_profile.ui
@@ -7,42 +7,53 @@
     <x>0</x>
     <y>0</y>
     <width>329</width>
-    <height>93</height>
+    <height>153</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Profile Editor</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Profile name</string>
-     </property>
-    </widget>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <layout class="QVBoxLayout" name="notif_bar"/>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="edtProfile">
-     <property name="placeholderText">
-      <string>Profile name</string>
-     </property>
-    </widget>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Profile name</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="edtProfile">
+       <property name="placeholderText">
+        <string>Profile name</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Description</string>
-     </property>
-    </widget>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Description</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="edtDesc">
+       <property name="placeholderText">
+        <string>Profile description</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="edtDesc">
-     <property name="placeholderText">
-      <string>Profile description</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
