--- a/ui/wizard/ui_lookup_entity.ui
+++ b/ui/wizard/ui_lookup_entity.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>389</width>
-    <height>113</height>
+    <width>368</width>
+    <height>141</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
@@ -21,42 +27,56 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QVBoxLayout" name="notif_bar"/>
+    <layout class="QVBoxLayout" name="notif_bar">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetNoConstraint</enum>
+     </property>
+    </layout>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
-     <property name="maximumSize">
-      <size>
-       <width>777</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>`check_` prefix will be appended on the lookup name</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label">
-       <property name="minimumSize">
+      <widget class="QLabel" name="label_2">
+       <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>0</height>
+         <width>777</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="text">
-        <string>Lookup Name</string>
+        <string>`check_` prefix will be appended on the lookup name</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="edtName">
-       <property name="placeholderText">
-        <string>Enter lookup name</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="minimumSize">
+          <size>
+           <width>60</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Lookup Name</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="edtName">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>22</height>
+          </size>
+         </property>
+         <property name="placeholderText">
+          <string>Enter lookup name</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
