Updated the documentation and refactored auto generated code

--- a/resources.qrc
+++ b/resources.qrc
@@ -99,7 +99,7 @@
     <file>images/icons/period.png</file>
     <file>images/icons/down_arrow.png</file>
     <file>images/icons/period_blue.png</file>
-    <file>images/icons/code.jpg</file>
+    <file>images/icons/code.png</file>
     <file>images/icons/clear.png</file>
   </qresource>
 </RCC>
