--- a/ui/wizard/ui_double_property.ui
+++ b/ui/wizard/ui_double_property.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>258</width>
-    <height>151</height>
+    <height>166</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,7 +37,7 @@
    <item row="1" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Scale</string>
+      <string>Decimal places</string>
      </property>
     </widget>
    </item>
