--- a/ui/wizard/ui_entity.ui
+++ b/ui/wizard/ui_entity.ui
@@ -30,6 +30,9 @@
     <layout class="QVBoxLayout" name="notif_bar"/>
    </item>
    <item>
+    <layout class="QGridLayout" name="gridLayout_2"/>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label">
@@ -57,9 +60,15 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_2">
+       <property name="minimumSize">
+        <size>
+         <width>68</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>101</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
@@ -72,7 +81,7 @@
       <widget class="QLineEdit" name="edtDesc">
        <property name="minimumSize">
         <size>
-         <width>120</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
