--- a/ui/wizard/ui_entity.ui
+++ b/ui/wizard/ui_entity.ui
@@ -33,32 +33,21 @@
     <layout class="QGridLayout" name="gridLayout_2"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="edtDesc">
        <property name="minimumSize">
         <size>
-         <width>60</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
-       <property name="text">
-        <string>Entity Name</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="edtTable">
        <property name="placeholderText">
-        <string>Table name</string>
+        <string>Table description</string>
        </property>
       </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
+     <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="minimumSize">
         <size>
@@ -77,16 +66,23 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QLineEdit" name="edtDesc">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
        <property name="minimumSize">
         <size>
-         <width>0</width>
+         <width>60</width>
          <height>0</height>
         </size>
        </property>
+       <property name="text">
+        <string>Entity Name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="edtTable">
        <property name="placeholderText">
-        <string>Table description</string>
+        <string>Table name</string>
        </property>
       </widget>
      </item>
