--- a/ui/wizard/ui_lookup_entity.ui
+++ b/ui/wizard/ui_lookup_entity.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>368</width>
-    <height>141</height>
+    <height>139</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,21 +36,11 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label_2">
-       <property name="maximumSize">
-        <size>
-         <width>777</width>
-         <height>16777215</height>
-        </size>
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="verticalSpacing">
+        <number>10</number>
        </property>
-       <property name="text">
-        <string>`check_` prefix will be appended on the lookup name</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
+       <item row="1" column="0">
         <widget class="QLabel" name="label">
          <property name="minimumSize">
           <size>
@@ -63,7 +53,7 @@
          </property>
         </widget>
        </item>
-       <item>
+       <item row="1" column="1">
         <widget class="QLineEdit" name="edtName">
          <property name="minimumSize">
           <size>
@@ -73,6 +63,19 @@
          </property>
          <property name="placeholderText">
           <string>Enter lookup name</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QLabel" name="label_2">
+         <property name="maximumSize">
+          <size>
+           <width>777</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>`check_` prefix will be appended on the lookup name</string>
          </property>
         </widget>
        </item>
