--- a/ui/wizard/ui_lookup_value.ui
+++ b/ui/wizard/ui_lookup_value.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>282</width>
-    <height>152</height>
+    <height>144</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,8 +24,11 @@
     <layout class="QVBoxLayout" name="notif_bar"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <property name="verticalSpacing">
+      <number>10</number>
+     </property>
+     <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="minimumSize">
         <size>
@@ -38,41 +41,21 @@
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QLineEdit" name="edtValue">
        <property name="placeholderText">
         <string>Enter lookup value</string>
        </property>
       </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
+     <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Code</string>
        </property>
       </widget>
      </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>38</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
+     <item row="1" column="1">
       <widget class="QLineEdit" name="edtCode">
        <property name="maximumSize">
         <size>
@@ -98,7 +81,6 @@
  </widget>
  <tabstops>
   <tabstop>edtValue</tabstop>
-  <tabstop>edtCode</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
