--- a/ui/wizard/ui_profile.ui
+++ b/ui/wizard/ui_profile.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>329</width>
-    <height>153</height>
+    <height>143</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,33 +18,32 @@
     <layout class="QVBoxLayout" name="notif_bar"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <property name="verticalSpacing">
+      <number>10</number>
+     </property>
+     <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Profile name</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QLineEdit" name="edtProfile">
        <property name="placeholderText">
         <string>Profile name</string>
        </property>
       </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
+     <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Description</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="1" column="1">
       <widget class="QLineEdit" name="edtDesc">
        <property name="placeholderText">
         <string>Profile description</string>
@@ -67,7 +66,6 @@
  </widget>
  <tabstops>
   <tabstop>edtProfile</tabstop>
-  <tabstop>edtDesc</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
