--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>779</width>
+    <width>802</width>
     <height>637</height>
    </rect>
   </property>
@@ -359,9 +359,15 @@
          </item>
          <item row="0" column="1">
           <widget class="QComboBox" name="cboProfile">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
-             <width>300</width>
+             <width>10</width>
              <height>30</height>
             </size>
            </property>
@@ -382,7 +388,7 @@
            </property>
            <property name="maximumSize">
             <size>
-             <width>30</width>
+             <width>16777215</width>
              <height>16777215</height>
             </size>
            </property>
@@ -1155,9 +1161,15 @@
     </property>
     <item row="1" column="1">
      <widget class="ProfileTenureDiagram" name="dg_tenure" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
-        <width>500</width>
+        <width>100</width>
         <height>320</height>
        </size>
       </property>
@@ -1165,15 +1177,21 @@
     </item>
     <item row="1" column="0">
      <widget class="QScrollArea" name="scrollArea">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
-        <width>175</width>
+        <width>50</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>225</width>
+        <width>16777215</width>
         <height>16777215</height>
        </size>
       </property>
@@ -1188,8 +1206,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>173</width>
-         <height>458</height>
+         <width>259</width>
+         <height>504</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -1246,7 +1264,7 @@
         <item>
          <widget class="QCheckBox" name="cbMultiParty">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>1</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -1259,6 +1277,12 @@ linked to a single spatial unit</string>
         </item>
         <item>
          <widget class="QLabel" name="label_6">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -1292,7 +1316,7 @@ linked to a single spatial unit</string>
           </property>
           <property name="maximumSize">
            <size>
-            <width>300</width>
+            <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
@@ -1307,6 +1331,12 @@ linked to a single spatial unit</string>
         </item>
         <item>
          <widget class="QgsCollapsibleGroupBox" name="gb_start_dates">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>'Start' date range</string>
           </property>
