--- a/ui/composer/ui_composer_data_field.ui
+++ b/ui/composer/ui_composer_data_field.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>281</width>
-    <height>83</height>
+    <height>76</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,12 +25,6 @@
    </property>
    <item row="1" column="1">
     <widget class="QComboBox" name="cboDataField">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -43,7 +37,7 @@
     <widget class="QLabel" name="label_2">
      <property name="maximumSize">
       <size>
-       <width>16777215</width>
+       <width>80</width>
        <height>16777215</height>
       </size>
      </property>
