--- a/ui/ui_geoodk_import.ui
+++ b/ui/ui_geoodk_import.ui
@@ -58,17 +58,17 @@
              <string>Click Save to start import process ( import report will appear in the text below)</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
-             <item row="0" column="0">
-              <widget class="QTextEdit" name="txt_feedback"/>
-             </item>
-             <item row="1" column="0">
+             <item row="2" column="0">
               <widget class="QLabel" name="lbl_feedback">
                <property name="text">
                 <string/>
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="1" column="0">
+              <widget class="QTextEdit" name="txt_feedback"/>
+             </item>
+             <item row="3" column="0">
               <widget class="QProgressBar" name="pgbar">
                <property name="value">
                 <number>0</number>
@@ -90,7 +90,7 @@
              <item row="2" column="0">
               <widget class="QLabel" name="label_4">
                <property name="text">
-                <string>Available STDM entities in the mobile form</string>
+                <string>Available STDM entities in the mobile forms</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -108,7 +108,7 @@
               <layout class="QGridLayout" name="gridLayout_3">
                <item row="0" column="0" colspan="2">
                 <layout class="QGridLayout" name="gridLayout_2">
-                 <item row="3" column="1">
+                 <item row="2" column="1">
                   <widget class="QLineEdit" name="txt_filter">
                    <property name="minimumSize">
                     <size>
@@ -118,35 +118,28 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="3" column="0">
+                 <item row="2" column="0">
                   <widget class="QLabel" name="label_14">
                    <property name="text">
-                    <string>Filter text(optional)</string>
+                    <string>custom filter text</string>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="0">
-                  <widget class="QLabel" name="label_3">
-                   <property name="text">
-                    <string>Select Profile</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0">
                   <widget class="QLabel" name="label_2">
                    <property name="text">
                     <string>Directory</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="3" column="2">
+                 <item row="2" column="2">
                   <widget class="QLabel" name="label">
                    <property name="text">
                     <string>Records Found:</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="3" column="3">
+                 <item row="2" column="3">
                   <widget class="QLineEdit" name="txt_count">
                    <property name="enabled">
                     <bool>false</bool>
@@ -168,7 +161,7 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="1" column="1" colspan="2">
+                 <item row="0" column="1" colspan="2">
                   <widget class="QLineEdit" name="txt_directory">
                    <property name="minimumSize">
                     <size>
@@ -190,17 +183,7 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="0" column="1" colspan="3">
-                  <widget class="QComboBox" name="cbo_profile">
-                   <property name="minimumSize">
-                    <size>
-                     <width>0</width>
-                     <height>30</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="3">
+                 <item row="0" column="3">
                   <widget class="QPushButton" name="btn_chang_dir">
                    <property name="minimumSize">
                     <size>
@@ -226,8 +209,15 @@
                </item>
               </layout>
              </item>
-             <item row="3" column="0">
+             <item row="4" column="0">
               <widget class="QListWidget" name="lst_widget"/>
+             </item>
+             <item row="3" column="0">
+              <widget class="QCheckBox" name="chk_all">
+               <property name="text">
+                <string>Import All</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
