Fixed str_valdiation on Spatial unit switch

--- a/resources.qrc
+++ b/resources.qrc
@@ -101,5 +101,6 @@
     <file>images/icons/period_blue.png</file>
     <file>images/icons/code.png</file>
     <file>images/icons/clear.png</file>
+        <file>images/icons/custom_tenure.png</file>
   </qresource>
 </RCC>
