mobile data import fixed error on repeating certain imports

--- a/ui/ui_geoodk_import.ui
+++ b/ui/ui_geoodk_import.ui
@@ -125,7 +125,7 @@
                  <item row="2" column="0">
                   <widget class="QLabel" name="label_14">
                    <property name="text">
-                    <string>custom filter text</string>
+                    <string>Custom filter text</string>
                    </property>
                   </widget>
                  </item>
